h2 and jpa configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=PetAdoptionAgency
+spring.datasource.url=jdbc:h2:mem:testdb;NON_KEYWORDS=KEY,VALUE;CASE_INSENSITIVE_IDENTIFIERS=TRUE
+# Tell Hibernate not to create tables automatically
+spring.jpa.hibernate.ddl-auto=none
+# Ensure scripts run in the right order
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=false
