--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,8 +20,4 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -q clean install -DskipTests
-
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update Dependency Graph
-      uses: advanced-security/maven-dependency-submission-action@v1
+      run: mvn -B package --file pom.xml -DskipTests
