updating schema to be in line with h2 requirements

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,17 @@
 spring.application.name=PetAdoptionAgency
-spring.datasource.url=jdbc:h2:mem:testdb;NON_KEYWORDS=KEY,VALUE;CASE_INSENSITIVE_IDENTIFIERS=TRUE
-# Tell Hibernate not to create tables automatically
-spring.jpa.hibernate.ddl-auto=none
-# Ensure scripts run in the right order
-spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=false
+# Force the DB name to stay the same
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.name=testdb
+spring.datasource.generate-unique-name=false
+
+# Let Hibernate build the schema and then run import.sql
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# This is the "hidden" property that often fixes import.sql issues in 2026
+spring.jpa.properties.hibernate.hbm2ddl.import_files=import.sql
+
+# Ensures the SQL init mode doesn't conflict with Hibernate
+spring.sql.init.mode=never
